--- a/style.css
+++ b/style.css
@@ -1,29 +1,40 @@
+#body{
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+}
+
 .parent{
-    border: 10px solid green;
+    
     height: 100px;
-    display: flex;
-    align-content: center;
-    align-items: center;
+    display: inline-flex;
+    width: 100%;
+    justify-content: space-between;
 }
 
 .parent div{
-    height: 80px;
+    
     display: flex;
-    align-items: center;
+   
     font-size: 50px;
     font-weight: bold;
-    resize: both;
+    
+   
 }
 
 .d1{
-    border: 10px solid blue;
-    width: 20%;
+  
+    width: 49%;
+    
+    background-color: red;
 }
 .d2{
-    border: 10px solid red;
-    width: 20%;
+    
+    background-color: blue;
+    width: 49%;
 }
 .d0{
-    border: 10px solid black;
+    border: 1px solid black;
+    width: 2%;
     cursor: e-resize;
 }
